// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test FluxPlusWarning access monotype feature 1`] = `
<div>
  <mock-fluxplusmodal>
    <div
      class="flux-plus"
    >
      <img
        alt="You must have FLUX+ Pro membership or Monotype Fonts Add-on to access this feature."
        src="core-img/flux-plus/man-guess.jpg"
      />
      <div
        class="text"
      >
        You do not have Monotype Fonts Add-on.
      </div>
      <div
        class="buttons"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-block"
          type="button"
        >
          <span>
            Get Add-on
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
          type="button"
        >
          <span>
            Sign In
          </span>
        </button>
      </div>
      <div
        class="note"
      >
        You must have FLUX+ Pro membership or Monotype Fonts Add-on to access this feature.
      </div>
    </div>
  </mock-fluxplusmodal>
</div>
`;

exports[`test FluxPlusWarning should render correctly 1`] = `
<div>
  <mock-fluxplusmodal>
    <div
      class="flux-plus"
    >
      <img
        alt="You must have FLUX+ membership to access this feature."
        src="core-img/flux-plus/man-guess.jpg"
      />
      <div
        class="text"
      >
        <div>
          You are accessing a
        </div>
        <svgr-url />
        feature.
      </div>
      <div
        class="buttons"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-block"
          type="button"
        >
          <span>
            Subscribe now
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
          type="button"
        >
          <span>
            Sign In
          </span>
        </button>
      </div>
      <div
        class="note"
      >
        You must have FLUX+ membership to access this feature.
      </div>
    </div>
  </mock-fluxplusmodal>
</div>
`;

exports[`test FluxPlusWarning with user 1`] = `
<div>
  <mock-fluxplusmodal>
    <div
      class="flux-plus"
    >
      <img
        alt="You must have FLUX+ membership to access this feature."
        src="core-img/flux-plus/man-guess.jpg"
      />
      <div
        class="text"
      >
        <div>
          You are accessing a
        </div>
        <svgr-url />
        feature.
      </div>
      <div
        class="buttons"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-block"
          type="button"
        >
          <span>
            Subscribe now
          </span>
        </button>
      </div>
      <div
        class="note"
      >
        You must have FLUX+ membership to access this feature.
      </div>
    </div>
  </mock-fluxplusmodal>
</div>
`;
